--- a/.github/workflows/Tutor_CI.yml
+++ b/.github/workflows/Tutor_CI.yml
@@ -13,8 +13,13 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
+    - name: Execute bootstrap.sh to install dependencies(flake8 and pytest included)
+      run: |
+        sudo ./bootstrap.sh
     - name: Lint with flake8
       run: |
-        pip install flake8
         flake8 . --count --select=W291,W292,W293,E3,E9 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Test with pytest
+      run: |
+        pipenv run python3 -m pytest
