--- a/.github/workflows/Tutor_CI.yml
+++ b/.github/workflows/Tutor_CI.yml
@@ -15,8 +15,12 @@ jobs:
         python-version: 3.7
     - name: Execute bootstrap.sh to install dependencies(flake8 and pytest included)
       run: |
-        chmod +x ./bootstrap.sh
-        ./bootstrap.sh
+        pip3 install pipenv
+        export PIPENV_VENV_IN_PROJECT="enabled"
+        export VIRTUALENV_ALWAYS_COPY=1
+        pipenv sync --dev
+        sudo -u postgres createdb tutor
+        sudo -u postgres psql -c "ALTER ROLE postgres WITH PASSWORD 'tutor';"
     - name: Lint with flake8
       run: |
         flake8 . --count --select=W291,W292,W293,E3,E9 --show-source --statistics
