--- a/.github/workflows/Tutor_CI.yml
+++ b/.github/workflows/Tutor_CI.yml
@@ -21,8 +21,8 @@ jobs:
         pipenv sync --dev
     - name: Lint with flake8
       run: |
-        flake8 . --count --select=W291,W292,W293,E3,E9 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        pipenv run flake8 . --count --select=W291,W292,W293,E3,E9 --show-source --statistics
+        pipenv run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
         pipenv run python3 -m pytest
