--- a/.github/workflows/Tutor_CI.yml
+++ b/.github/workflows/Tutor_CI.yml
@@ -22,8 +22,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-    - name: Execute bootstrap.sh to install dependencies(flake8 and pytest included)
+    - name: Install dependencies(flake8 and pytest included)
       run: |
+        sudo apt update
+        sudo apt install postgresql postgresql-contrib postgresql-common postgresql-client
         pip3 install pipenv
         pipenv sync --dev
     - name: Lint with flake8
