Using bootstrap.sh

--- a/.github/workflows/Tutor_CI.yml
+++ b/.github/workflows/Tutor_CI.yml
@@ -26,8 +26,8 @@ jobs:
         python-version: 3.7
     - name: Install dependencies(flake8 and pytest included)
       run: |
-        pip3 install pipenv
-        pipenv sync --dev
+        chmod +x ./bootstrap.sh
+        ./bootstrap.sh
     - name: Lint with flake8
       run: |
         pipenv run flake8 . --count --select=W291,W292,W293,E3,E9 --show-source --statistics
