--- a/.github/workflows/Tutor_CI.yml
+++ b/.github/workflows/Tutor_CI.yml
@@ -19,8 +19,8 @@ jobs:
         ./bootstrap.sh
     - name: Lint with flake8
       run: |
-        pipenv run flake8 . --count --select=W291,W292,W293,E3,E9 --exclude=*/migrations/* --show-source --statistics
-        pipenv run flake8 . --count --exit-zero --max-complexity=10 --exclude=*/migrations/* --max-line-length=127 --statistics
+        pipenv run flake8 . --count --select=W291,W292,W293,E3,E9 --extend-exclude=migrations/ --show-source --statistics
+        pipenv run flake8 . --count --exit-zero --max-complexity=10 --extend-exclude=migrations/ --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
         pipenv run python3 -m pytest
