Run bootstrap.sh

--- a/.github/workflows/Tutor_CI.yml
+++ b/.github/workflows/Tutor_CI.yml
@@ -13,6 +13,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
+    - name: Install dependencies(flake8 and pytest included)
+      run: |
+        chmod +x ./bootstrap.sh
+        ./bootstrap.sh
     - name: Lint with flake8
       run: |
         pip install flake8
