--- a/.github/workflows/Tutor_CI.yml
+++ b/.github/workflows/Tutor_CI.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         pip install flake8
         flake8 . --count --select=W292,W293,E3,E9 --show-source --statistics
-        flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
         pipenv run python3 -m pytest
